# VIPER

./: .gitignore  AGENTS.md  Dockerfile.frontend  LOCAL_TESTING.md  README.md  azure.yaml  pyproject.toml  sample.env
.github/: copilot-instructions.md
azure/: containerapps.bicep
docs/: architecture.md  azure-deployment.md  configuration.md  development.md  local-validation.md
infra/: main.bicep  main.parameters.json
samples/: cobra_sample_usage.ipynb
scripts/: run_local_video_analysis.py
src/cobrapy/: azure_credentials.py  azure_integration.py  cobra_utils.py  video_analyzer.py  video_client.py  video_preprocessor.py
src/cobrapy/models/: environment.py
tests/: test_cobra_utils_audio.py  test_environment.py  test_video_client.py
