[tool.poetry]
name = "cobrapy"
version = "0.1.0"
description = "Content Based Image Retrieval Analysis - a python package for parsing videos using multi-modal large langauge models"
authors = ["Brady Leavitt <brady.d.leavitt@gmail.com>","Owen Van Valkenburg <owenv@microsoft.com>"]
readme = "README.md"

packages = [
    { include = "cobrapy", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.37.0"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
numpy = "^2.0.1"
nest-asyncio = "^1.6.0"
opencv-python = "^4.10.0.84"
psutil = "^6.0.0"
pydantic-settings = "^2.5.2"
azure-identity = "^1.17.1"
azure-storage-blob = "^12.19.0"
azure-search-documents = "^11.4.0"
azure-cognitiveservices-speech = "^1.37.0"
fastapi = "^0.112.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
